# FRIB-Quadrupole-Code

./: README.md
ECE480-Distribution.X/: ECE480-Distribution.mc3  main.c
ECE480-Distribution.X/mcc_generated_files/: device_config.c  device_config.h  i2c1_slave.c  i2c1_slave.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  pin_manager.c  pin_manager.h
ECE480-Distribution.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
Initial-Distribution-Board/: Distribution.kicad_pcb  Distribution.kicad_prl  Distribution.kicad_pro
Initial-Distribution-Board/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Software_LabVIEW_VIs/: Attenuation Control.vi  bits_to_byte.vi  coerce_to_range.vi  control logic check.vi  decimal_to_bits_att.vi  log.csv  log_to_csv.vi  serial config check.vi
pico-bar-adjust/: CMakeLists.txt  main.cpp  mcp3428.cpp
pico-i2c-driver/: CMakeLists.txt  server.c
